# reapp-protocol-contracts

./: .gitignore  README.md
contracts/ap2-authorization/mandate-extension/: Cargo.toml
contracts/ap2-authorization/mandate-extension/src/: error.rs  lib.rs  storage.rs  test.rs  types.rs
contracts/mandate-registry/: Cargo.toml
contracts/mandate-registry/src/: error.rs  events.rs  mandate.rs  payment.rs  pool_test.rs  pooltypes.rs  storage.rs
contracts/mandate-registry/test_snapshots/pool_test/: frozen_trustline_member_excluded_and_evictable.1.json  full_pool_max_schedules_clears.1.json  minimal_price_beats_posted_breakpoint.1.json  pool_full_at_capacity.1.json  pooled_registration_negatives.1.json  pulled_allowance_below_threshold_aborts.1.json  pulled_allowance_member_excluded_pool_still_fires.1.json  reentrant_clear_cannot_double_capture.1.json  register_pool_bad_inputs_rejected.1.json  register_pool_extreme_deadline_typed_error.1.json  register_pool_happy.1.json  schedule_validation_rejects_malformed.1.json  simulate_equals_capture_same_ledger.1.json  simulate_past_window_reports_no_fire.1.json  under_threshold_aborts_nobody_pays.1.json  uniform_price_across_tiers.1.json  value_binding_clears_below_breakpoints.1.json
contracts/mandate-registry/test_snapshots/reentry_probe/: reentrancy_via_evil_token.1.json
contracts/mandate-registry/test_snapshots/test/: duplicate_register_rejected.1.json  execute_requires_agent_auth.1.json  expired_mandate_rejected.1.json  happy_path_runs_every_method.1.json  insufficient_allowance_blocks_payment.1.json  (+8 more)
(+122 files in other folders)
